Addition of github links in projects section

--- a/index.html
+++ b/index.html
@@ -75,13 +75,18 @@
                 <li><span>Languages:</span></br><i>C, C++, HTML, CSS, SQL</i></li></br>
                 <li><span>Virtual Reality:</span></br><i>Unity, A-Frame</i></li></br>
                 <li><span>Version Control:</span></br><i>Git, Github</i></li></br>
-                <li><span>Scripting Language:</span></br><i>Apps Script</i></li></br>
+                <li><span>Scripting Language:</span></br><i>Apps Script, Bash</i></li></br>
               </ul>
             </div>
 
             <div class="tab-contents" id="experience">
               <ul>
-                <li><span>Research:</span> </br><i>Blockchain Security</i></li>
+                <li><span>Research:</span> </br><i>Ongoing research on introducing blockchain in E-voting system using Solidity, Ganache, Truffle and Metamask</i></li>
+              </br>
+              <li><span>Indigo:</span> </br><i>◦ Unified Web Application: Working on a Web Application to integrate all Indigo websites into a single, unified website
+                for all employees to simplify the whole process.<br/>
+                ◦ Digitalization and AI Integration: Focussing to digitalize manual tasks and using Artificial Intelligence to improve
+                efficiency</i></li>
               </br>
                 <li><span>Timechain Summer of Code:</span> </br><i>Developed a gmail plugin to enhance its security in a team of 3.</i></li></br>
                 <li><span>CS/IT Game Development:</span> </br><i>Developed a 3-level game based on Netflix series in a team of 15.</i></li></br>
@@ -91,7 +96,7 @@
 
             <div class="tab-contents" id="education">
               <ul>
-                <li><span>Indira Gandhi Delhi Technical University For Women</span></br><i>Information Techmology:8.36&nbsp;&nbsp;&nbsp;&nbsp;2021-2024</i></li></br>
+                <li><span>Indira Gandhi Delhi Technical University For Women</span></br><i>Information Techmology:8.44&nbsp;&nbsp;&nbsp;&nbsp;2021-2024</i></li></br>
                 <li><span>Oxford Senior Secondary School</span></br><i>12th(CBSE):95.4%&nbsp;&nbsp;&nbsp;&nbsp;2020-2021</br>10th(CBSE):93.4%&nbsp;&nbsp;&nbsp;&nbsp;2018-2019</i></li></br>
               </ul>
             </div>
@@ -136,7 +141,7 @@
           <div class="layer">
             <h3>The UpsIde Down</h3>
             <p>A three-level "Stranger Things" inspired puzzle game featuring demonic creatures and challenging code-based puzzles</p>
-            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="https://theupsidedowngame.itch.io/the-upside-down-game"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
 
@@ -147,7 +152,7 @@
             <h3>VR Chemistry Laboratory</h3>
             <p>An immersive, user-friendly VR chemistry lab for Oculus Quest, enhancing student learning and safety in flame test experiments, with a peaceful user interface to minimise
               cognitive load, while promoting risk-free experimentation</p>
-            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="https://github.com/riya6789/VR-lab-final"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
 
@@ -157,7 +162,7 @@
           <div class="layer">
             <h3>Solar System</h3>
             <p>An animation of a solar system created using A-Frame</p>
-            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="https://github.com/shikshanayan/Solar-system"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
 
